# Velvet_vcpkg

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
Velvet/: Camera.hpp  Common.cuh  Material.hpp  VtClothSolverGPU.hpp
